--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,14 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Argon" parent="Base.Theme.Argon" />
+    <style name="Theme.Argon" parent="Base.Theme.Argon" >
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="bottomNavBar" parent="Widget.MaterialComponents.BottomNavigationView">
+        <item name="android:background">@android:color/white</item>
+        <item name="android:icon">@color/black</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="itemHorizontalTranslationEnabled">false</item>
+    </style>
 </resources>
