--- a/app/src/main/res/layout/fragment_points__table.xml
+++ b/app/src/main/res/layout/fragment_points__table.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragment.Points_Table">
+    tools:context=".Fragments.MainFragment.Points_Table">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
