commit 5 ish Matches

--- a/app/src/main/res/layout/wing_layout.xml
+++ b/app/src/main/res/layout/wing_layout.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:text="Hello"
-        android:textSize="24sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -18,7 +18,7 @@
         android:id="@+id/wingMembersRv"
         android:layout_width="match_parent"
         tools:listitem="@layout/wing_mem_layout"
-        android:layout_marginTop="10dp"
+        android:layout_marginVertical="10dp"
         android:layout_height="wrap_content"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
