--- a/app/src/main/res/layout/wing_mem_layout.xml
+++ b/app/src/main/res/layout/wing_mem_layout.xml
@@ -24,4 +24,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nameTextView" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginVertical="2dp"
+        android:background="@color/black"
+        app:layout_constraintTop_toBottomOf="@id/roleTextView"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
