--- a/app/src/main/res/layout/point_table_layout.xml
+++ b/app/src/main/res/layout/point_table_layout.xml
@@ -1,44 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="horizontal"
         android:weightSum="4"
-        android:orientation="horizontal">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:id="@+id/collegeName"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="College Name"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <TextView
+            android:id="@+id/totalMatch"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
             android:text="Total Matches"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <TextView
+            android:id="@+id/win"
             android:layout_width="0dp"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
             android:text="Win"
             android:textColor="#388E3C"
-            android:layout_weight="1"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
         <TextView
+            android:id="@+id/loss"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="match_parent"
+            android:layout_weight="1"
             android:gravity="center"
-            android:textColor="#D32F2F"
             android:text="Loss"
-            android:textSize="20sp"/>
+            android:textColor="#D32F2F"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
