--- a/app/src/main/res/layout/wing_layout.xml
+++ b/app/src/main/res/layout/wing_layout.xml
@@ -1,27 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="3dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_marginVertical="3dp">
 
     <TextView
         android:id="@+id/wingName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Hello"
+        android:textColor="@color/black"
         android:textSize="30sp"
+        android:textStyle="bold|italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/wingMembersRv"
         android:layout_width="match_parent"
-        tools:listitem="@layout/wing_mem_layout"
-        android:layout_marginVertical="10dp"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/wingName" />
+        app:layout_constraintTop_toBottomOf="@id/wingName"
+        tools:listitem="@layout/wing_mem_layout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
